Saving OpenAPI Overlay

--- a/_apis/stripe/overlays/invoice-openapi-search.yml
+++ b/_apis/stripe/overlays/invoice-openapi-search.yml
@@ -9,16 +9,16 @@ paths:
         sorted by creation date, with the most recently created invoice items
         appearing first.</p>
       tags:
-        - V1
-        - Invoiceitems
+        - Invoice Items
+      summary: Retrieve Invoiceitems
     post:
       description: >-
         <p>Creates an item to be added to a draft invoice (up to 250 items per
         invoice). If no invoice is specified, the item will be on the next
         invoice created for the customer specified.</p>
       tags:
-        - V1
-        - Invoiceitems
+        - Invoice Items
+      summary: Create Invoiceitems
   /v1/invoiceitems/{invoiceitem}:
     delete:
       description: >-
@@ -26,24 +26,21 @@ paths:
         invoice items is only possible when they’re not attached to invoices, or
         if it’s attached to a draft invoice.</p>
       tags:
-        - V1
-        - Invoiceitems
-        - Invoiceitem
+        - Invoice Items
+      summary: Delete Invoiceitems Invoiceitem
     get:
       description: <p>Retrieves the invoice item with the given ID.</p>
       tags:
-        - V1
-        - Invoiceitems
-        - Invoiceitem
+        - Invoice Items
+      summary: Retrieve Invoiceitems Invoiceitem
     post:
       description: >-
         <p>Updates the amount or description of an invoice item on an upcoming
         invoice. Updating an invoice item is only possible before the invoice
         it’s attached to is closed.</p>
       tags:
-        - V1
-        - Invoiceitems
-        - Invoiceitem
+        - Invoice Items
+      summary: Create Invoiceitems Invoiceitem
   /v1/invoices:
     get:
       description: >-
@@ -51,10 +48,8 @@ paths:
         customer. The invoices are returned sorted by creation date, with the
         most recently created invoices appearing first.</p>
       tags:
-        - V1
-        - Invoiceitems
-        - Invoiceitem
         - Invoices
+      summary: Retrieve Invoices
     post:
       description: >-
         <p>This endpoint creates a draft invoice for a given customer. The
@@ -63,10 +58,8 @@ paths:
         <a href="#pay_invoice">pay</a> or <a href="#send_invoice">send</a> the
         invoice to your customers.</p>
       tags:
-        - V1
-        - Invoiceitems
-        - Invoiceitem
         - Invoices
+      summary: Create Invoices
   /v1/invoices/search:
     get:
       description: >-
@@ -82,11 +75,9 @@ paths:
         to an hour behind during outages. Search functionality is not available
         to merchants in India.</p>
       tags:
-        - V1
-        - Invoiceitems
-        - Invoiceitem
         - Invoices
         - Search
+      summary: Retrieve Invoices Search
   /v1/invoices/upcoming:
     get:
       description: >-
@@ -116,12 +107,9 @@ paths:
         <code>subscription_proration_date</code> on the upcoming invoice
         resource.</p>
       tags:
-        - V1
-        - Invoiceitems
-        - Invoiceitem
         - Invoices
-        - Search
         - Upcoming
+      summary: Retrieve Invoices Upcoming
   /v1/invoices/upcoming/lines:
     get:
       description: >-
@@ -130,13 +118,10 @@ paths:
         and the first handful of those items. There is also a URL where you can
         retrieve the full (paginated) list of line items.</p>
       tags:
-        - V1
-        - Invoiceitems
-        - Invoiceitem
         - Invoices
-        - Search
-        - Upcoming
         - Lines
+        - Upcoming
+      summary: Retrieve Invoices Upcoming Lines
   /v1/invoices/{invoice}:
     delete:
       description: >-
@@ -145,25 +130,13 @@ paths:
         fail; once an invoice has been finalized or if an invoice is for a
         subscription, it must be <a href="#void_invoice">voided</a>.</p>
       tags:
-        - V1
-        - Invoiceitems
-        - Invoiceitem
         - Invoices
-        - Search
-        - Upcoming
-        - Lines
-        - Invoice
+      summary: Delete Invoices Invoice
     get:
       description: <p>Retrieves the invoice with the given ID.</p>
       tags:
-        - V1
-        - Invoiceitems
-        - Invoiceitem
         - Invoices
-        - Search
-        - Upcoming
-        - Lines
-        - Invoice
+      summary: Retrieve Invoices Invoice
     post:
       description: >-
         <p>Draft invoices are fully editable. Once an invoice is <a
@@ -182,14 +155,8 @@ paths:
 
         <code>auto_advance=false</code>.</p>
       tags:
-        - V1
-        - Invoiceitems
-        - Invoiceitem
         - Invoices
-        - Search
-        - Upcoming
-        - Lines
-        - Invoice
+      summary: Create Invoices Invoice
   /v1/invoices/{invoice}/finalize:
     post:
       description: >-
@@ -197,15 +164,9 @@ paths:
         payment on invoices. However, if you’d like to finalize a draft invoice
         manually, you can do so using this method.</p>
       tags:
-        - V1
-        - Invoiceitems
-        - Invoiceitem
-        - Invoices
-        - Search
-        - Upcoming
-        - Lines
-        - Invoice
         - Finalize
+        - Invoices
+      summary: Create Invoices Invoice Finalize
   /v1/invoices/{invoice}/lines:
     get:
       description: >-
@@ -214,15 +175,9 @@ paths:
         of those items. There is also a URL where you can retrieve the full
         (paginated) list of line items.</p>
       tags:
-        - V1
-        - Invoiceitems
-        - Invoiceitem
         - Invoices
-        - Search
-        - Upcoming
         - Lines
-        - Invoice
-        - Finalize
+      summary: Retrieve Invoices Invoice Lines
   /v1/invoices/{invoice}/lines/{line_item_id}:
     post:
       description: >-
@@ -238,33 +193,21 @@ paths:
         Updating an invoice’s line item is only possible before the invoice is
         finalized.</p>
       tags:
-        - V1
-        - Invoiceitems
-        - Invoiceitem
         - Invoices
-        - Search
-        - Upcoming
+        - Items
+        - Line
         - Lines
-        - Invoice
-        - Finalize
-        - Line_item_id
+      summary: Create Invoices Invoice Lines Line Item Id
   /v1/invoices/{invoice}/mark_uncollectible:
     post:
       description: >-
         <p>Marking an invoice as uncollectible is useful for keeping track of
         bad debts that can be written off for accounting purposes.</p>
       tags:
-        - V1
-        - Invoiceitems
-        - Invoiceitem
         - Invoices
-        - Search
-        - Upcoming
-        - Lines
-        - Invoice
-        - Finalize
-        - Line_item_id
-        - Mark_uncollectible
+        - Mark
+        - Uncollectible
+      summary: Create Invoices Invoice Mark Uncollectible
   /v1/invoices/{invoice}/pay:
     post:
       description: >-
@@ -275,18 +218,9 @@ paths:
         out of the normal collection schedule or for some other reason, you can
         do so.</p>
       tags:
-        - V1
-        - Invoiceitems
-        - Invoiceitem
         - Invoices
-        - Search
-        - Upcoming
-        - Lines
-        - Invoice
-        - Finalize
-        - Line_item_id
-        - Mark_uncollectible
         - Pay
+      summary: Create Invoices Invoice Pay
   /v1/invoices/{invoice}/send:
     post:
       description: >-
@@ -302,19 +236,9 @@ paths:
         <p>Requests made in test-mode result in no emails being sent, despite
         sending an <code>invoice.sent</code> event.</p>
       tags:
-        - V1
-        - Invoiceitems
-        - Invoiceitem
         - Invoices
-        - Search
-        - Upcoming
-        - Lines
-        - Invoice
-        - Finalize
-        - Line_item_id
-        - Mark_uncollectible
-        - Pay
         - Send
+      summary: Create Invoices Invoice Send
   /v1/invoices/{invoice}/void:
     post:
       description: >-
@@ -323,17 +247,5 @@ paths:
         only applies to finalized invoices and maintains a papertrail where the
         invoice can still be 
       tags:
-        - V1
-        - Invoiceitems
-        - Invoiceitem
         - Invoices
-        - Search
-        - Upcoming
-        - Lines
-        - Invoice
-        - Finalize
-        - Line_item_id
-        - Mark_uncollectible
-        - Pay
-        - Send
-        - Vo
+      summary: Create Invoices Invoice Void
