--- a/_apis/stripe/overlays/issuing-openapi-search.yml
+++ b/_apis/stripe/overlays/issuing-openapi-search.yml
@@ -9,27 +9,25 @@ paths:
         objects are sorted in descending order by creation date, with the most
         recently created object appearing first.</p>
       tags:
-        - V1
+        - Authorization
         - Issuing
-        - Authorizations
+      summary: Retrieve Issuing Authorizations
   /v1/issuing/authorizations/{authorization}:
     get:
       description: <p>Retrieves an Issuing <code>Authorization</code> object.</p>
       tags:
-        - V1
-        - Issuing
-        - Authorizations
         - Authorization
+        - Issuing
+      summary: Retrieve Issuing Authorizations Authorization
     post:
       description: >-
         <p>Updates the specified Issuing <code>Authorization</code> object by
         setting the values of the parameters passed. Any parameters not provided
         will be left unchanged.</p>
       tags:
-        - V1
-        - Issuing
-        - Authorizations
         - Authorization
+        - Issuing
+      summary: Create Issuing Authorizations Authorization
   /v1/issuing/authorizations/{authorization}/approve:
     post:
       description: >-
@@ -42,11 +40,10 @@ paths:
         href="/docs/issuing/controls/real-time-authorizations#authorization-handling">respond
         directly to the webhook request to approve an authorization</a>.</p>
       tags:
-        - V1
-        - Issuing
-        - Authorizations
-        - Authorization
         - Approve
+        - Authorization
+        - Issuing
+      summary: Create Issuing Authorizations Authorization Approve
   /v1/issuing/authorizations/{authorization}/decline:
     post:
       description: >-
@@ -59,12 +56,10 @@ paths:
         href="/docs/issuing/controls/real-time-authorizations#authorization-handling">respond
         directly to the webhook request to decline an authorization</a>.</p>
       tags:
-        - V1
-        - Issuing
-        - Authorizations
         - Authorization
-        - Approve
         - Decline
+        - Issuing
+      summary: Create Issuing Authorizations Authorization Decline
   /v1/issuing/cardholders:
     get:
       description: >-
@@ -72,51 +67,33 @@ paths:
         objects are sorted in descending order by creation date, with the most
         recently created object appearing first.</p>
       tags:
-        - V1
+        - Card Holders
         - Issuing
-        - Authorizations
-        - Authorization
-        - Approve
-        - Decline
-        - Cardholders
+      summary: Retrieve Issuing Cardholders
     post:
       description: >-
         <p>Creates a new Issuing <code>Cardholder</code> object that can be
         issued cards.</p>
       tags:
-        - V1
+        - Card Holders
         - Issuing
-        - Authorizations
-        - Authorization
-        - Approve
-        - Decline
-        - Cardholders
+      summary: Create Issuing Cardholders
   /v1/issuing/cardholders/{cardholder}:
     get:
       description: <p>Retrieves an Issuing <code>Cardholder</code> object.</p>
       tags:
-        - V1
+        - Card Holders
         - Issuing
-        - Authorizations
-        - Authorization
-        - Approve
-        - Decline
-        - Cardholders
-        - Cardholder
+      summary: Retrieve Issuing Cardholders Cardholder
     post:
       description: >-
         <p>Updates the specified Issuing <code>Cardholder</code> object by
         setting the values of the parameters passed. Any parameters not provided
         will be left unchanged.</p>
       tags:
-        - V1
+        - Card Holders
         - Issuing
-        - Authorizations
-        - Authorization
-        - Approve
-        - Decline
-        - Cardholders
-        - Cardholder
+      summary: Create Issuing Cardholders Cardholder
   /v1/issuing/cards:
     get:
       description: >-
@@ -124,57 +101,31 @@ paths:
         sorted in descending order by creation date, with the most recently
         created object appearing first.</p>
       tags:
-        - V1
-        - Issuing
-        - Authorizations
-        - Authorization
-        - Approve
-        - Decline
-        - Cardholders
-        - Cardholder
         - Cards
+        - Issuing
+      summary: Retrieve Issuing Cards
     post:
       description: <p>Creates an Issuing <code>Card</code> object.</p>
       tags:
-        - V1
-        - Issuing
-        - Authorizations
-        - Authorization
-        - Approve
-        - Decline
-        - Cardholders
-        - Cardholder
         - Cards
+        - Issuing
+      summary: Create Issuing Cards
   /v1/issuing/cards/{card}:
     get:
       description: <p>Retrieves an Issuing <code>Card</code> object.</p>
       tags:
-        - V1
-        - Issuing
-        - Authorizations
-        - Authorization
-        - Approve
-        - Decline
-        - Cardholders
-        - Cardholder
         - Cards
-        - Card
+        - Issuing
+      summary: Retrieve Issuing Cards Card
     post:
       description: >-
         <p>Updates the specified Issuing <code>Card</code> object by setting the
         values of the parameters passed. Any parameters not provided will be
         left unchanged.</p>
       tags:
-        - V1
-        - Issuing
-        - Authorizations
-        - Authorization
-        - Approve
-        - Decline
-        - Cardholders
-        - Cardholder
         - Cards
-        - Card
+        - Issuing
+      summary: Create Issuing Cards Card
   /v1/issuing/disputes:
     get:
       description: >-
@@ -182,17 +133,9 @@ paths:
         are sorted in descending order by creation date, with the most recently
         created object appearing first.</p>
       tags:
-        - V1
-        - Issuing
-        - Authorizations
-        - Authorization
-        - Approve
-        - Decline
-        - Cardholders
-        - Cardholder
-        - Cards
-        - Card
         - Disputes
+        - Issuing
+      summary: Retrieve Issuing Disputes
     post:
       description: >-
         <p>Creates an Issuing <code>Dispute</code> object. Individual pieces of
@@ -203,33 +146,16 @@ paths:
         reasons and evidence</a> for more details about evidence
         requirements.</p>
       tags:
-        - V1
-        - Issuing
-        - Authorizations
-        - Authorization
-        - Approve
-        - Decline
-        - Cardholders
-        - Cardholder
-        - Cards
-        - Card
         - Disputes
+        - Issuing
+      summary: Create Issuing Disputes
   /v1/issuing/disputes/{dispute}:
     get:
       description: <p>Retrieves an Issuing <code>Dispute</code> object.</p>
       tags:
-        - V1
-        - Issuing
-        - Authorizations
-        - Authorization
-        - Approve
-        - Decline
-        - Cardholders
-        - Cardholder
-        - Cards
-        - Card
         - Disputes
-        - Dispute
+        - Issuing
+      summary: Retrieve Issuing Disputes Dispute
     post:
       description: >-
         <p>Updates the specified Issuing <code>Dispute</code> object by setting
@@ -237,18 +163,9 @@ paths:
         left unchanged. Properties on the <code>evidence</code> object can be
         unset by passing in an empty string.</p>
       tags:
-        - V1
-        - Issuing
-        - Authorizations
-        - Authorization
-        - Approve
-        - Decline
-        - Cardholders
-        - Cardholder
-        - Cards
-        - Card
         - Disputes
-        - Dispute
+        - Issuing
+      summary: Create Issuing Disputes Dispute
   /v1/issuing/disputes/{dispute}/submit:
     post:
       description: >-
@@ -258,19 +175,10 @@ paths:
         href="/docs/issuing/purchases/disputes#dispute-reasons-and-evidence">Dispute
         reasons and evidence</a>.</p>
       tags:
-        - V1
-        - Issuing
-        - Authorizations
-        - Authorization
-        - Approve
-        - Decline
-        - Cardholders
-        - Cardholder
-        - Cards
-        - Card
         - Disputes
-        - Dispute
+        - Issuing
         - Submit
+      summary: Create Issuing Disputes Dispute Submit
   /v1/issuing/settlements:
     get:
       description: >-
@@ -278,123 +186,47 @@ paths:
         objects are sorted in descending order by creation date, with the most
         recently created object appearing first.</p>
       tags:
-        - V1
         - Issuing
-        - Authorizations
-        - Authorization
-        - Approve
-        - Decline
-        - Cardholders
-        - Cardholder
-        - Cards
-        - Card
-        - Disputes
-        - Dispute
-        - Submit
         - Settlements
+      summary: Retrieve Issuing Settlements
   /v1/issuing/settlements/{settlement}:
     get:
       description: <p>Retrieves an Issuing <code>Settlement</code> object.</p>
       tags:
-        - V1
         - Issuing
-        - Authorizations
-        - Authorization
-        - Approve
-        - Decline
-        - Cardholders
-        - Cardholder
-        - Cards
-        - Card
-        - Disputes
-        - Dispute
-        - Submit
         - Settlements
-        - Settlement
+      summary: Retrieve Issuing Settlements Settlement
     post:
       description: >-
         <p>Updates the specified Issuing <code>Settlement</code> object by
         setting the values of the parameters passed. Any parameters not provided
         will be left unchanged.</p>
       tags:
-        - V1
         - Issuing
-        - Authorizations
-        - Authorization
-        - Approve
-        - Decline
-        - Cardholders
-        - Cardholder
-        - Cards
-        - Card
-        - Disputes
-        - Dispute
-        - Submit
         - Settlements
-        - Settlement
+      summary: Create Issuing Settlements Settlement
   /v1/issuing/tokens:
     get:
       description: <p>Lists all Issuing <code>Token</code> objects for a given card.</p>
       tags:
-        - V1
         - Issuing
-        - Authorizations
-        - Authorization
-        - Approve
-        - Decline
-        - Cardholders
-        - Cardholder
-        - Cards
-        - Card
-        - Disputes
-        - Dispute
-        - Submit
-        - Settlements
-        - Settlement
         - Tokens
+      summary: Retrieve Issuing Tokens
   /v1/issuing/tokens/{token}:
     get:
       description: <p>Retrieves an Issuing <code>Token</code> object.</p>
       tags:
-        - V1
         - Issuing
-        - Authorizations
-        - Authorization
-        - Approve
-        - Decline
-        - Cardholders
-        - Cardholder
-        - Cards
-        - Card
-        - Disputes
-        - Dispute
-        - Submit
-        - Settlements
-        - Settlement
         - Tokens
-        - Token
+      summary: Retrieve Issuing Tokens Token
     post:
       description: >-
         <p>Attempts to update the specified Issuing <code>Token</code> object to
         the status specified.</p>
       tags:
-        - V1
         - Issuing
-        - Authorizations
-        - Authorization
-        - Approve
-        - Decline
-        - Cardholders
-        - Cardholder
-        - Cards
-        - Card
-        - Disputes
-        - Dispute
-        - Submit
-        - Settlements
-        - Settlement
         - Tokens
-        - Token
+      summary: Create Issuing Tokens Token
   /v1/issuing/transactions:
     get:
       description: >-
@@ -402,69 +234,22 @@ paths:
         objects are sorted in descending order by creation date, with the most
         recently created object appearing first.</p>
       tags:
-        - V1
         - Issuing
-        - Authorizations
-        - Authorization
-        - Approve
-        - Decline
-        - Cardholders
-        - Cardholder
-        - Cards
-        - Card
-        - Disputes
-        - Dispute
-        - Submit
-        - Settlements
-        - Settlement
-        - Tokens
-        - Token
         - Transactions
+      summary: Retrieve Issuing Transactions
   /v1/issuing/transactions/{transaction}:
     get:
       description: <p>Retrieves an Issuing <code>Transaction</code> object.</p>
       tags:
-        - V1
         - Issuing
-        - Authorizations
-        - Authorization
-        - Approve
-        - Decline
-        - Cardholders
-        - Cardholder
-        - Cards
-        - Card
-        - Disputes
-        - Dispute
-        - Submit
-        - Settlements
-        - Settlement
-        - Tokens
-        - Token
         - Transactions
-        - Transaction
+      summary: Retrieve Issuing Transactions Transaction
     post:
       description: >-
         <p>Updates the specified Issuing <code>Transaction</code> object by
         setting the values of the parameters passed. Any parameters not provided
         will be left unch
       tags:
-        - V1
         - Issuing
-        - Authorizations
-        - Authorization
-        - Approve
-        - Decline
-        - Cardholders
-        - Cardholder
-        - Cards
-        - Card
-        - Disputes
-        - Dispute
-        - Submit
-        - Settlements
-        - Settlement
-        - Tokens
-        - Token
         - Transactions
-        - Transacti
+      summary: Create Issuing Transactions Transaction
