--- a/_apis/stripe/overlays/payouts-openapi-search.yml
+++ b/_apis/stripe/overlays/payouts-openapi-search.yml
@@ -9,8 +9,8 @@ paths:
         or payouts that Stripe sent to you. The payouts return in sorted order,
         with the most recently created payouts appearing first.</p>
       tags:
-        - V1
         - Payouts
+      summary: Retrieve Payouts
     post:
       description: >-
         <p>To send funds to your own bank account, create a new payout object.
@@ -27,8 +27,8 @@ paths:
         the payout draws from. The <a href="#balance_object">balance object</a>
         details available and pending amounts by source type.</p>
       tags:
-        - V1
         - Payouts
+      summary: Create Payouts
   /v1/payouts/{payout}:
     get:
       description: >-
@@ -36,18 +36,16 @@ paths:
         ID from either a payout creation request or the payout list. Stripe
         returns the corresponding payout information.</p>
       tags:
-        - V1
         - Payouts
-        - Payout
+      summary: Retrieve Payouts Payout
     post:
       description: >-
         <p>Updates the specified payout by setting the values of the parameters
         you pass. We don’t change parameters that you don’t provide. This
         request only accepts the metadata as arguments.</p>
       tags:
-        - V1
         - Payouts
-        - Payout
+      summary: Create Payouts Payout
   /v1/payouts/{payout}/cancel:
     post:
       description: >-
@@ -55,10 +53,9 @@ paths:
         yet. Stripe refunds the funds to your available balance. You can’t
         cancel automatic Stripe payouts.</p>
       tags:
-        - V1
-        - Payouts
-        - Payout
         - Cancel
+        - Payouts
+      summary: Create Payouts Payout Cancel
   /v1/payouts/{payout}/reverse:
     post:
       description: >-
@@ -73,8 +70,6 @@ paths:
         signatory of the selected bank account authorizes the debit on the bank
         account and that no other authorization is req
       tags:
-        - V1
         - Payouts
-        - Payout
-        - Cancel
-        - Rever
+        - Reverse
+      summary: Create Payouts Payout Reverse
