--- a/_apis/stripe/overlays/plans-openapi-search.yml
+++ b/_apis/stripe/overlays/plans-openapi-search.yml
@@ -6,37 +6,37 @@ paths:
     get:
       description: <p>Returns a list of your plans.</p>
       tags:
-        - V1
         - Plans
+      summary: Retrieve Plans
     post:
       description: >-
         <p>You can now model subscriptions more flexibly using the <a
         href="#prices">Prices API</a>. It replaces the Plans API and is
         backwards compatible to simplify your migration.</p>
       tags:
-        - V1
         - Plans
+      summary: Create Plans
   /v1/plans/{plan}:
     delete:
       description: >-
         <p>Deleting plans means new subscribers can’t be added. Existing
         subscribers aren’t affected.</p>
       tags:
-        - V1
-        - Plans
         - Plan
+        - Plans
+      summary: Delete Plans Plan
     get:
       description: <p>Retrieves the plan with the given ID.</p>
       tags:
-        - V1
-        - Plans
         - Plan
+        - Plans
+      summary: Retrieve Plans Plan
     post:
       description: >-
         <p>Updates the specified plan by setting the values of the parameters
         passed. Any parameters not provided are left unchanged. By design, you
         cannot change a plan’s ID, amount, currency, or billing 
       tags:
-        - V1
+        - Plan
         - Plans
-        - Pl
+      summary: Create Plans Plan
