--- a/_apis/stripe/overlays/products-openapi-search.yml
+++ b/_apis/stripe/overlays/products-openapi-search.yml
@@ -9,13 +9,13 @@ paths:
         creation date, with the most recently created products appearing
         first.</p>
       tags:
-        - V1
         - Products
+      summary: Retrieve Products
     post:
       description: <p>Creates a new product object.</p>
       tags:
-        - V1
         - Products
+      summary: Create Products
   /v1/products/search:
     get:
       description: >-
@@ -31,9 +31,9 @@ paths:
         to an hour behind during outages. Search functionality is not available
         to merchants in India.</p>
       tags:
-        - V1
         - Products
         - Search
+      summary: Retrieve Products Search
   /v1/products/{id}:
     delete:
       description: >-
@@ -42,26 +42,20 @@ paths:
         <code>type=good</code> is only possible if it has no SKUs associated
         with it.</p>
       tags:
-        - V1
         - Products
-        - Search
-        - Id
+      summary: Delete Products Id
     get:
       description: >-
         <p>Retrieves the details of an existing product. Supply the unique
         product ID from either a product creation request or the product list,
         and Stripe will return the corresponding product information.</p>
       tags:
-        - V1
         - Products
-        - Search
-        - Id
+      summary: Retrieve Products Id
     post:
       description: >-
         <p>Updates the specific product by setting the values of the parameters
         passed. Any parameters not provided will be left unch
       tags:
-        - V1
         - Products
-        - Search
-        - null
+      summary: Create Products Id
