Saving OpenAPI Overlay

--- a/_apis/stripe/overlays/promotion-codes-openapi-search.yml
+++ b/_apis/stripe/overlays/promotion-codes-openapi-search.yml
@@ -6,15 +6,17 @@ paths:
     get:
       description: <p>Returns a list of your promotion codes.</p>
       tags:
-        - V1
-        - Promotion_codes
+        - Codes
+        - Promotion
+      summary: Retrieve Promotion Codes
     post:
       description: >-
         <p>A promotion code points to a coupon. You can optionally restrict the
         code to a specific customer, redemption limit, and expiration date.</p>
       tags:
-        - V1
-        - Promotion_codes
+        - Codes
+        - Promotion
+      summary: Create Promotion Codes
   /v1/promotion_codes/{promotion_code}:
     get:
       description: >-
@@ -23,14 +25,16 @@ paths:
         href="/docs/api/promotion_codes/list">list</a> with the desired
         <code>code</code>.</p>
       tags:
-        - V1
-        - Promotion_codes
-        - Promotion_code
+        - Code
+        - Codes
+        - Promotion
+      summary: Retrieve Promotion Codes Promotion Code
     post:
       description: >-
         <p>Updates the specified promotion code by setting the values of the
         parameters passed. Most fields are, by design, not edi
       tags:
-        - V1
-        - Promotion_codes
-        - Promotion_co
+        - Code
+        - Codes
+        - Promotion
+      summary: Create Promotion Codes Promotion Code
