--- a/_apis/stripe/overlays/quotes-openapi-search.yml
+++ b/_apis/stripe/overlays/quotes-openapi-search.yml
@@ -6,8 +6,8 @@ paths:
     get:
       description: <p>Returns a list of your quotes.</p>
       tags:
-        - V1
         - Quotes
+      summary: Retrieve Quotes
     post:
       description: >-
         <p>A quote models prices and services for a customer. Default options
@@ -16,38 +16,33 @@ paths:
         href="https://dashboard.stripe.com/settings/billing/quote">quote
         template</a>.</p>
       tags:
-        - V1
         - Quotes
+      summary: Create Quotes
   /v1/quotes/{quote}:
     get:
       description: <p>Retrieves the quote with the given ID.</p>
       tags:
-        - V1
         - Quotes
-        - Quote
+      summary: Retrieve Quotes Quote
     post:
       description: <p>A quote models prices and services for a customer.</p>
       tags:
-        - V1
         - Quotes
-        - Quote
+      summary: Create Quotes Quote
   /v1/quotes/{quote}/accept:
     post:
       description: <p>Accepts the specified quote.</p>
       tags:
-        - V1
-        - Quotes
-        - Quote
         - Accept
+        - Quotes
+      summary: Create Quotes Quote Accept
   /v1/quotes/{quote}/cancel:
     post:
       description: <p>Cancels the quote.</p>
       tags:
-        - V1
-        - Quotes
-        - Quote
-        - Accept
         - Cancel
+        - Quotes
+      summary: Create Quotes Quote Cancel
   /v1/quotes/{quote}/computed_upfront_line_items:
     get:
       description: >-
@@ -57,23 +52,19 @@ paths:
         URL where you can retrieve the full (paginated) list of upfront line
         items.</p>
       tags:
-        - V1
+        - Computed
+        - Items
+        - Line
         - Quotes
-        - Quote
-        - Accept
-        - Cancel
-        - Computed_upfront_line_items
+        - Upfront
+      summary: Retrieve Quotes Quote Computed Upfront Line Items
   /v1/quotes/{quote}/finalize:
     post:
       description: <p>Finalizes the quote.</p>
       tags:
-        - V1
-        - Quotes
-        - Quote
-        - Accept
-        - Cancel
-        - Computed_upfront_line_items
         - Finalize
+        - Quotes
+      summary: Create Quotes Quote Finalize
   /v1/quotes/{quote}/line_items:
     get:
       description: >-
@@ -82,24 +73,14 @@ paths:
         those items. There is also a URL where you can retrieve the full
         (paginated) list of line items.</p>
       tags:
-        - V1
+        - Items
+        - Line
         - Quotes
-        - Quote
-        - Accept
-        - Cancel
-        - Computed_upfront_line_items
-        - Finalize
-        - Line_items
+      summary: Retrieve Quotes Quote Line Items
   /v1/quotes/{quote}/pdf:
     get:
       description: <p>Download the PDF for a finalized
       tags:
-        - V1
+        - PDF
         - Quotes
-        - Quote
-        - Accept
-        - Cancel
-        - Computed_upfront_line_items
-        - Finalize
-        - Line_items
-        - P
+      summary: Retrieve Quotes Quote Pdf
