--- a/_apis/stripe/overlays/refunds-openapi-search.yml
+++ b/_apis/stripe/overlays/refunds-openapi-search.yml
@@ -9,8 +9,8 @@ paths:
         sorted order, with the most recent refunds appearing first The 10 most
         recent refunds are always available by default on the Charge object.</p>
       tags:
-        - V1
         - Refunds
+      summary: Retrieve Refunds
     post:
       description: >-
         <p>When you create a new refund, you must specify a Charge or a
@@ -37,15 +37,14 @@ paths:
 
         or when trying to refund more money than is left on a charge.</p>
       tags:
-        - V1
         - Refunds
+      summary: Create Refunds
   /v1/refunds/{refund}:
     get:
       description: <p>Retrieves the details of an existing refund.</p>
       tags:
-        - V1
         - Refunds
-        - Refund
+      summary: Retrieve Refunds Refund
     post:
       description: >-
         <p>Updates the refund that you specify by setting the values of the
@@ -55,9 +54,8 @@ paths:
 
         <p>This request only accepts <code>metadata</code> as an argument.</p>
       tags:
-        - V1
         - Refunds
-        - Refund
+      summary: Create Refunds Refund
   /v1/refunds/{refund}/cancel:
     post:
       description: >-
@@ -68,7 +66,6 @@ paths:
         methods that require customer action can enter the
         <code>requires_action</code> 
       tags:
-        - V1
+        - Cancel
         - Refunds
-        - Refund
-        - Canc
+      summary: Create Refunds Refund Cancel
