--- a/_apis/stripe/overlays/reporting-openapi-search.yml
+++ b/_apis/stripe/overlays/reporting-openapi-search.yml
@@ -8,9 +8,10 @@ paths:
         <p>Returns a list of Report Runs, with the most recent appearing
         first.</p>
       tags:
-        - V1
         - Reporting
-        - Report_runs
+        - Reports
+        - Runs
+      summary: Retrieve Reporting Report Runs
     post:
       description: >-
         <p>Creates a new object and begin running the report. (Certain report
@@ -18,26 +19,26 @@ paths:
         href="https://stripe.com/docs/keys#test-live-modes">live-mode API
         key</a>.)</p>
       tags:
-        - V1
         - Reporting
-        - Report_runs
+        - Reports
+        - Runs
+      summary: Create Reporting Report Runs
   /v1/reporting/report_runs/{report_run}:
     get:
       description: <p>Retrieves the details of an existing Report Run.</p>
       tags:
-        - V1
         - Reporting
-        - Report_runs
-        - Report_run
+        - Reports
+        - Runs
+      summary: Retrieve Reporting Report Runs Report Run
   /v1/reporting/report_types:
     get:
       description: <p>Returns a full list of Report Types.</p>
       tags:
-        - V1
         - Reporting
-        - Report_runs
-        - Report_run
-        - Report_types
+        - Reports
+        - Types
+      summary: Retrieve Reporting Report Types
   /v1/reporting/report_types/{report_type}:
     get:
       description: >-
@@ -45,9 +46,7 @@ paths:
         a <a href="https://stripe.com/docs/keys#test-live-modes">live-mode API
         key
       tags:
-        - V1
         - Reporting
-        - Report_runs
-        - Report_run
-        - Report_types
-        - Report_ty
+        - Reports
+        - Types
+      summary: Retrieve Reporting Report Types Report Type
